--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,8 +7,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
+    font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
 
 main{
