--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Audiowide", sans-serif;
+    /* font-family: "Sofia", sans-serif; */
 }
 
 main{
